contact form updated

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <a href="products.html" class="hover:text-black">Product</a>
         </li>
         <li class="hover:-translate-y-0.5 transition">
-          <a href="#" class="hover:text-black">Contact</a>
+          <a href="contact.html" class="hover:text-black">Contact</a>
         </li>
       </ul>
     </nav>
