--- a/products.html
+++ b/products.html
@@ -43,7 +43,7 @@
           <a href="#" class="hover:text-black">Product</a>
         </li>
         <li class="hover:-translate-y-0.5 transition">
-          <a href="#" class="hover:text-black">Contact</a>
+          <a href="contact.html" class="hover:text-black">Contact</a>
         </li>
       </ul>
     </nav>
@@ -134,6 +134,15 @@
           <p>Rs.259/-</p>
         </div>
       </div>
+    </section>
+
+    <section class="bg-green-100 p-5 mt-3">
+      <h1 class="text-3xl font-bold mx-10 mb-3">greenden</h1>
+      <p class="mx-10">
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Assumenda
+        similique.
+      </p>
+      <p class="mx-10">@ 2021 greenden.com</p>
     </section>
     
 </body>
