--- a/contact.html
+++ b/contact.html
@@ -21,12 +21,13 @@
       </div>
 
       <svg
+      id="btn"
         xmlns="http://www.w3.org/2000/svg"
         fill="none"
         viewBox="0 0 24 24"
         stroke-width="1.5"
         stroke="currentColor"
-        class="size-6 md:hidden"
+        class="size-6 md:hidden cursor-pointer"
       >
         <path
           stroke-linecap="round"
@@ -48,6 +49,22 @@
       </ul>
     </nav>
 
+    <div class="fixed bg-green-100 transition-all duration-1000 top-0 z-20 w-[250px] h-[760px] right-0" style="right: -75%" id="sidenav">
+      <p class="font-bold text-right p-5 cursor-pointer" id="close">X</p>
+      <ul class=" text-gray-600 font-medium text-center space-y-5 mt-4">
+        <li class="hover:-translate-y-0.5 transition">
+          <a href="index.html" class="hover:text-black">Home</a>
+        </li>
+        <li class="hover:-translate-y-0.5 transition">
+          <a href="products.html" class="hover:text-black">Product</a>
+        </li>
+        <li class="hover:-translate-y-0.5 transition">
+          <a href="contact.html" class="hover:text-black">Contact</a>
+        </li>
+      </ul>
+
+    </div>
+
     <section class="bg-white dark:bg-gray-900">
         <div class="py-8 lg:py-16 px-4 mx-auto max-w-screen-md">
             <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-center text-gray-900 dark:text-white">Contact Us</h2>
@@ -65,7 +82,7 @@
                     <label for="message" class="block mb-2 text-sm font-medium text-gray-900 dark:text-gray-400">Your message</label>
                     <textarea id="message" rows="6" class="block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg shadow-sm border border-gray-300 focus:ring-primary-500 focus:border-primary-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500" placeholder="Leave a comment..."></textarea>
                 </div>
-                <button type="submit" class="py-3 px-5 text-sm font-medium text-center text-white rounded-lg bg-primary-700 bg-blue-600 sm:w-fit hover:bg-primary-800 focus:ring-4 focus:outline-none focus:ring-primary-300 dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800">Send message</button>
+                <button type="submit" class="py-3 px-5 text-sm font-medium text-center text-white rounded-lg bg-primary-700 bg-green-600 hover:scale-105 sm:w-fit hover:bg-primary-800 focus:ring-4 focus:outline-none focus:ring-primary-300 dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800">Send message</button>
             </form>
         </div>
       </section>
@@ -73,10 +90,10 @@
     <section class="bg-green-100 p-5 mt-3">
       <h1 class="text-3xl font-bold mx-10 mb-3">greenden</h1>
       <p class="mx-10">
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Assumenda
-        similique.
+        Dedicated to promoting eco-friendly practices and sustainability. Join us in making the world a greener place by adopting small, impactful changes.
       </p>
       <p class="mx-10">@ 2021 greenden.com</p>
     </section>
   </body>
+  <script src="contact.js"></script>
 </html>
