--- a/products.html
+++ b/products.html
@@ -20,13 +20,13 @@
         <h1 class="font-galada">Greenden</h1>
       </div>
 
-      <svg
+      <svg id="btn"
         xmlns="http://www.w3.org/2000/svg"
         fill="none"
         viewBox="0 0 24 24"
         stroke-width="1.5"
         stroke="currentColor"
-        class="size-6 md:hidden"
+        class="size-6 md:hidden cursor-pointer"
       >
         <path
           stroke-linecap="round"
@@ -47,6 +47,22 @@
         </li>
       </ul>
     </nav>
+
+    <div class="fixed bg-green-100 transition-all duration-1000 top-0 z-20 w-[250px] h-[760px] right-0" style="right: -75%" id="sidenav">
+      <p class="font-bold text-right p-5 cursor-pointer" id="close">X</p>
+      <ul class=" text-gray-600 font-medium text-center space-y-5 mt-4">
+        <li class="hover:-translate-y-0.5 transition">
+          <a href="index.html" class="hover:text-black">Home</a>
+        </li>
+        <li class="hover:-translate-y-0.5 transition">
+          <a href="products.html" class="hover:text-black">Product</a>
+        </li>
+        <li class="hover:-translate-y-0.5 transition">
+          <a href="contact.html" class="hover:text-black">Contact</a>
+        </li>
+      </ul>
+
+    </div>
 
     <section class="capitalize">
         <h1 class="text-3xl font-bold text-center m-5">our products</h1>
@@ -139,11 +155,11 @@
     <section class="bg-green-100 p-5 mt-3">
       <h1 class="text-3xl font-bold mx-10 mb-3">greenden</h1>
       <p class="mx-10">
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Assumenda
-        similique.
+        Dedicated to promoting eco-friendly practices and sustainability. Join us in making the world a greener place by adopting small, impactful changes.
       </p>
       <p class="mx-10">@ 2021 greenden.com</p>
     </section>
     
 </body>
+<script src="products.js"></script>
 </html>
